frontend/tests/cases/positive/instanceNatCoeffect.gr
interface Simple a (n : Nat)

data A = B

-- use of '1' as a Nat
instance Simple A 1
