frontend/tests/cases/negative/interfaces/parameters/instanceTooManyParams.gr
interface Simple a

-- too many parameters (expecting 1)
instance Simple Int Int
